Hobbies del estudiante

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <div>Nombre: Neris Pacheco</div>
 
-    <div>Semestre que cursa: 4to</div>
+    <div>Semestre: 4to</div>
+
+    <div>-Hobbies-</div>
+
 
 </body>
 </html>
