--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div>Semestre: 4to</div>
 
     <div>-Hobbies-</div>
-    <div>Hobbie #1</div>
+    <div>Ver películas en cine</div>
+    <div>Leer historias de romance</div>
     
 
 
