--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div>Leer historias de romance</div>
     <div>Ver videos de relatos en facebook</div>
     <div>Tomar una corta ciesta</div>
+    <div>Escuchar música</div>
     
 
 
