--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div>Ver videos de relatos en facebook</div>
     <div>Tomar una corta ciesta</div>
     <div>Escuchar música</div>
+    <div>Visitar a la familia</div>
     
 
 
