--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div>Tomar una corta ciesta</div>
     <div>Escuchar música</div>
     <div>Visitar a la familia</div>
+    <div>Hacer compras en línea</div>
     
 
 
