--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <div>Escuchar música</div>
     <div>Visitar a la familia</div>
     <div>Hacer compras en línea</div>
+
+    <div>-Series favoritas-</div>
     
 
 
