--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <div>-Series favoritas-</div>
 
     <div>Los 100</div>
+    <div><img src="https://tse1.mm.bing.net/th?id=OIP.eB4z-AxJY1b97fUWg2VrPgHaFj&pid=Api&rs=1&c=1&qlt=95&h=180"width="500" height="500" ></div>
+
     
 
 
