Imagen de serie #2

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <div><img src="https://tse1.mm.bing.net/th?id=OIP.eB4z-AxJY1b97fUWg2VrPgHaFj&pid=Api&rs=1&c=1&qlt=95&h=180"width="500" height="500" ></div>
 
     <div>Bridgerton</div>
+    <div><img src="http://br.web.img3.acsta.net/pictures/20/11/04/11/32/4052345.jpg"width="500" height="500" ></div>
+
     
 
 
