--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 
 </head>
 <body>
+    <div>Taller Buenas Prácticas de Desarrollo de Software</div>
     <div>Nombre: Neris Pacheco</div>
-
     <div>Semestre: 4to</div>
-
     <div>-Hobbies-</div>
-
     <div>Ver películas en cine</div>
     <div>Leer historias de romance</div>
     <div>Ver videos de relatos en facebook</div>
@@ -21,14 +19,12 @@
     <div>Escuchar música</div>
     <div>Visitar a la familia</div>
     <div>Hacer compras en línea</div>
-
     <div>-Series favoritas-</div>
-
     <div>Los 100</div>
-    <div><img src="https://tse1.mm.bing.net/th?id=OIP.eB4z-AxJY1b97fUWg2VrPgHaFj&pid=Api&rs=1&c=1&qlt=95&h=180"width="500" height="500" ></div>
-
+    <div><img src="https://1.bp.blogspot.com/-w94b3Czls0s/YK_CaqnLMYI/AAAAAAAAAaQ/PqgqtzJwG2cQXzp8GHO_SMVtdakTTCjtgCLcBGAsYHQ/s600/the-100-portada-2.jpg"width="300" height="400" ></div>
     <div>Bridgerton</div>
-    <div><img src="http://br.web.img3.acsta.net/pictures/20/11/04/11/32/4052345.jpg"width="500" height="500" ></div>
+    <div><img src="http://br.web.img3.acsta.net/pictures/20/11/04/11/32/4052345.jpg"width="300" height="400" ></div>
+    <div>Bridgerton</div>
 
     
 
